--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sherry Yan’s P8105 website</title>
+<title>About me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -376,26 +376,14 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Sherry Yan’s P8105 website</h1>
+<h1 class="title toc-ignore">About me</h1>
 
 </div>
 
 
-<div id="welcome-to-my-personal-website-for-p8105" class="section level1">
-<h1>Welcome to my personal website for P8105!</h1>
-<p><img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/123597485_527200321572351_7129836085619689458_n.jpg?_nc_cat=1&amp;ccb=2&amp;_nc_sid=825194&amp;_nc_ohc=h9oKYOwGQg8AX9c7TCT&amp;_nc_ht=scontent-lga3-1.xx&amp;oh=550b65e9710fa0cad74889930820607f&amp;oe=5FC982FA" /></p>
-</div>
-<div id="links-to-my-professional-accounts" class="section level1">
-<h1>Links to my professional accounts</h1>
-<ul>
-<li><a href="https://www.linkedin.com/in/sherry-yan-a1a287107/">Linkedin</a></li>
-<li>Email:<a href="mailto:my2644@cumc.columbia.edu" class="email">my2644@cumc.columbia.edu</a></li>
-<li><a href="https://github.com/ymysherry">Github</a></li>
-</ul>
-</div>
-<div id="link-to-other-page-within-the-site" class="section level1">
-<h1>Link to other page within the site</h1>
-<p><a href="about.html">About me</a></p>
+<div id="this-page-contains-information-about-me" class="section level1">
+<h1>This page contains information about me</h1>
+<p>As a second year student at the Columbia University Mailman School of Public Health, I will be graduating in May, 2021 with a Master of Public Health in Biostatistics and a focus on Comparative Effectiveness and Outcome Research (CEOR). My practicum and previous internship experience at Daiichi Sankyo, Pfizer and Astra Zeneca deepened my interest in a career in the healthcare industry.</p>
 </div>
 
 
