--- a/about.html
+++ b/about.html
@@ -381,9 +381,79 @@ div.tocify {
 </div>
 
 
-<div id="this-page-contains-information-about-me" class="section level1">
-<h1>This page contains information about me</h1>
+<div id="profile" class="section level1">
+<h1>Profile</h1>
 <p>As a second year student at the Columbia University Mailman School of Public Health, I will be graduating in May, 2021 with a Master of Public Health in Biostatistics and a focus on Comparative Effectiveness and Outcome Research (CEOR). My practicum and previous internship experience at Daiichi Sankyo, Pfizer and Astra Zeneca deepened my interest in a career in the healthcare industry.</p>
+</div>
+<div id="my-resume" class="section level1 tabset">
+<h1>My resume</h1>
+<div id="education" class="section level2">
+<h2>Education</h2>
+<p>-Columbia University, Mailman School of Public Health, New York, NY</p>
+<p>Expected May 2021</p>
+<p>Master of Public Health in Biostatistics</p>
+<p>• Certificate in Comparative Effectiveness and Outcomes Research</p>
+<p>• Relevant coursework: Statistical Computing with SAS, Data Science, Probability, Regression Analysis, Analysis of Large-Scale Data, Health Economics</p>
+<p>-University of California, Los Angeles, CA</p>
+<p>Jun. 2019</p>
+<p>Bachelor of Science in Environmental Science</p>
+<p>• Minor in Civil and Environmental Engineering</p>
+<p>• Relevant coursework: General and Organic Chemistry &amp; Lab, Physics, Biology, Remote Sensing, Atmospheric &amp; Oceanic Science, Geography</p>
+</div>
+<div id="work-experience" class="section level2">
+<h2>Work Experience</h2>
+<ol style="list-style-type: decimal">
+<li>Daiichi Sankyo Inc. – Basking Ridge, NJ</li>
+</ol>
+<p>Jun. 2020 - Aug. 2020</p>
+<p>Health Economics &amp; Outcome Research Intern</p>
+<p>• Identified ICD-10 codes required for the calculation of the NCI Comorbidity Index for adverse events of treatment received by breast cancer patients to support AMCP poster</p>
+<p>• Modified a SAS macro to accommodate the ICD-10 codes to support the SEER analysis</p>
+<p>• Conducted literature review on the disease characteristics, epidemiology, and treatment guidelines of metastatic colorectal cancer and presented the slide deck to the US-HEOR team</p>
+<p>• Developed a protocol concept for a treatment pattern analysis for metastatic colorectal cancer</p>
+<ol start="2" style="list-style-type: decimal">
+<li>Pfizer – Shanghai, China</li>
+</ol>
+<p>Jul. 2018 - Sept. 2018</p>
+<p>Pharmacovigilance Intern</p>
+<p>• Reviewed QC reports and EHS evaluations to support pharmacovigilance and risk management across all Pfizer’s Business Units</p>
+<p>• Used Excel to compile global safety surveillance evaluation for weekly presentations</p>
+<p>• Examined and delivered literature reviews to Risk Management Associates for internal quarterly reports</p>
+<ol start="3" style="list-style-type: decimal">
+<li>AstraZeneca – Shanghai, China</li>
+</ol>
+<p>Jul. 2017 - Sep. 2017</p>
+<p>Medical Information Intern</p>
+<p>• Gathered and analyzed 30 research papers on a weekly basis from Pubmed and Embase to revise Safety Data Sheet</p>
+<p>• Uploaded research papers and clinical guidelines to Veeva Vault System to support daily work of sales representatives</p>
+<p>• Reviewed and compiled academic journals for delivery to healthcare providers (HCPs)</p>
+<p>• Used Excel to collect marketing data of competitor’s social media platforms for strategic analysis</p>
+</div>
+<div id="skills" class="section level2">
+<h2>Skills</h2>
+<p>• Software: SAS, R, Github, STATA, ENVI, ArcGIS, Veeva Vault, Microsoft Word/PowerPoint/Excel, Adobe Photoshop/Indesign</p>
+<p>• Lab: Mass Spectroscopy, Centrifuge, Chromatography</p>
+</div>
+<div id="research" class="section level2">
+<h2>Research</h2>
+<ol style="list-style-type: decimal">
+<li>UCLA : Sept. 2018 - Jun. 2019</li>
+</ol>
+<p>Senior Practicum Project for the ADEPT Group</p>
+<p>Los Angeles, CA</p>
+<p>• Used ArcGIS to construct emission maps at communities around Port of LA and Port of Long Beach as modeling outputs</p>
+<p>• Presented client’s Aerial Sniffer System for emissions regulation to authorities at Air Quality Management Districts</p>
+<p>• Received $275,000 from Bay Area Air Quality Management District for the demonstration project and proposed test</p>
+<p>• Completed an application to the Technology Advancement Program as part of the San Pedro Bay Ports’ Clean Air Action Plan</p>
+<ol start="2" style="list-style-type: decimal">
+<li>Undergraduate Research Assistant: Oct. 2017 - Jun. 2018</li>
+</ol>
+<p>Professor Sanjay Mohanty’s Lab</p>
+<p>Los Angeles, CA</p>
+<p>• Analyzed the concentration of nitrate in stormwater samples using chromatography and centrifuge</p>
+<p>• Collected soil sample samples and analyzed which area in the city of LA had the highest amount of pollutants</p>
+<p>• Measured micro-plastic concentration in water samples and identified particles using microscope and spectroscopy</p>
+</div>
 </div>
 
 
